@@ -1,5 +1,14 @@
 2006-11-20  Paolo Bonzini  <bonzini@gnu.org>
 
+	* lightning/i386/core-i386.h: Move jit_movip, jit_check8, jit_reg8,
+	jit_reg16, jit_movbrm...
+	* lightning/i386/core-32.h: ... here.
+	* lightning/i386/core-64.h: Redefine them.  Fix other bugs.
+
+	* tests/printf.c: Do not do a varargs call.
+
+2006-11-20  Paolo Bonzini  <bonzini@gnu.org>
+
 	* lightning/i386/asm-i386.h: Check in rewrite from aranym.
 	* lightning/i386/asm-32.h: Adjust.
 	* lightning/i386/asm-64.h: Adjust.
